--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -5,33 +5,37 @@ services:
   #   image: postgres:13.0-alpine
   #   volumes:
   #     - postgres_data:/var/lib/postgresql/data/
-  #   env_file:
-  #     - ./.env
+  #   environment:
+  #     POSTGRES_DB: postgres
+  #     POSTGRES_USER: postgres
+  #     POSTGRES_PASSWORD: postgres
+  
   backend:
     build: ../backend/
     restart: always
     volumes:
       - static_value:/app/staticfiles/
     depends_on:
+      - db
       - redis
     environment:
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
-
+  
   nginx:
     image: nginx:1.21.3-alpine
     ports:
       - "80:80"
     volumes:
-      - /root/LentaHackathon/infra/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ../docs/:/usr/share/nginx/html/api/docs/
       - static_value:/var/html/staticfiles/
     depends_on:
       - backend
-
+  
   redis:
     image: redis:latest
-
+  
   celery:
     build: ../backend/
     command: celery -A lenta_main worker -l info
@@ -39,8 +43,9 @@ services:
       - ../backend/:/app/
     depends_on:
       - backend
+      - db 
       - redis
-
+  
   flower:
     image: mher/flower
     ports:
@@ -54,5 +59,4 @@ services:
 volumes:
   static_value:
   media_value:
-  # postgres_data:
-
+  postgres_data:
