--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -11,8 +11,8 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
   
   backend:
-    # build: ../backend/
-    image: beszedin/lenta:latest
+    build: ../backend/
+    # image: beszedin/lenta:latest
     restart: always
     volumes:
       - static_value:/app/staticfiles/
